--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,8 @@ jobs:
 
       - name: Run tests
         run: mvn test
+
+      - name: Scan for secrets with Gitleaks
+        uses: zricethezav/gitleaks-action@v2
+        with:
+          args: "--verbose"
